After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 710885 - Two fixes for GApplication
Two fixes for GApplication
Status: RESOLVED FIXED
Product: glib
Classification: Platform
Component: gapplication
unspecified
Other All
: Normal normal
: ---
Assigned To: gtkdev
gtkdev
Depends on:
Blocks:
 
 
Reported: 2013-10-25 16:04 UTC by Giovanni Campagna
Modified: 2013-10-26 12:55 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
gapplication: fix memory leak (1.55 KB, patch)
2013-10-25 16:04 UTC, Giovanni Campagna
committed Details | Review
gapplication: don't emit warnings for DBus calls (2.12 KB, patch)
2013-10-25 16:04 UTC, Giovanni Campagna
committed Details | Review

Description Giovanni Campagna 2013-10-25 16:04:49 UTC
Found by code review.
Comment 1 Giovanni Campagna 2013-10-25 16:04:52 UTC
Created attachment 258133 [details] [review]
gapplication: fix memory leak

g_variant_get_child_value() returns a new GVariant, which we must
free.
Comment 2 Giovanni Campagna 2013-10-25 16:04:58 UTC
Created attachment 258134 [details] [review]
gapplication: don't emit warnings for DBus calls

If a broken (or malicious) remote client calls Open or CommandLine
on a GApplication that does not implement those, return a DBus
error instead of going through and then emitting a warning.
Comment 3 Allison Karlitskaya (desrt) 2013-10-26 12:22:41 UTC
Review of attachment 258133 [details] [review]:

Obviously correct.  Thanks.
Comment 4 Allison Karlitskaya (desrt) 2013-10-26 12:24:09 UTC
Review of attachment 258134 [details] [review]:

This indeed has always made me slightly uneasy, but I never really considered to bother fixing it.  This is a nice cleanup.  Thanks.
Comment 5 Giovanni Campagna 2013-10-26 12:55:44 UTC
Attachment 258133 [details] pushed as 3e48e3b - gapplication: fix memory leak
Attachment 258134 [details] pushed as 415c6d2 - gapplication: don't emit warnings for DBus calls